# Space_Dash

./: CMakeLists.txt  README.md
resources/: img.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  menuwindow.cpp  menuwindow.h  obstacle.cpp  obstacle.h
ui/: menuwindow.ui
